; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViGetString.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViGetString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32 }

@string_table = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ViGetString(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %5, align 8
  %6 = call i32 @Zero(%struct.TYPE_5__* %3, i32 16)
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 1
  store i32 %7, i32* %8, align 8
  %9 = load i32, i32* @string_table, align 4
  %10 = call i32 @LockList(i32 %9)
  %11 = load i32, i32* @string_table, align 4
  %12 = call %struct.TYPE_5__* @Search(i32 %11, %struct.TYPE_5__* %3)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %4, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = icmp ne %struct.TYPE_5__* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %5, align 8
  br label %19

19:                                               ; preds = %15, %1
  %20 = load i32, i32* @string_table, align 4
  %21 = call i32 @UnlockList(i32 %20)
  %22 = load i32*, i32** %5, align 8
  ret i32* %22
}

declare dso_local i32 @Zero(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @LockList(i32) #1

declare dso_local %struct.TYPE_5__* @Search(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @UnlockList(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
